--- a/views/customer/customers_checkout.handlebars
+++ b/views/customer/customers_checkout.handlebars
@@ -1,4 +1,4 @@
-@@ -1,25 +1,26 @@
+@@ -1,122 +1,123 @@
 <div class="breadcrumb-area pt-35 pb-35 bg-gray-3">
     <div class="container">
         <div class="breadcrumb-content text-center">
@@ -30,7 +30,52 @@
                                     <label for="firstname">FirstName</label>
                                     <input type="text" name="first-name" placeholder="First Name"
                                         value="{{request.form.firstname }}">
-@ -72,51 +73,51 @@
+                                </div>
+                            </div>
+                            <div class="col-lg-6 col-md-6">
+                                <div class="billing-info mb-20">
+                                    <label for="lastname">LastName</label>
+                                    <input type="text" name="last-name" placeholder="Last Name"
+                                        value="{{request.form.lastname }}">
+                                </div>
+                            </div>
+                            <div class="col-lg-12">
+                                <div class="billing-info mb-20">
+                                    <label for="Address1">Address Line 1</label>
+                                    <input type="text" name="Address-Line-1" placeholder="Address "
+                                        value="{{request.form.AddressLine1 }}">
+                                </div>
+                            </div>
+                            <div class="col-lg-12">
+                                <div class="billing-info mb-20">
+                                    <label for="Address2">Address Line 2</label>
+                                    <input type="text" name="Address-Line-2" placeholder="Address-Line-2"
+                                        value="{{request.form.AddressLine2 }}">
+                                </div>
+                            </div>
+                            <div class="col-lg-12">
+                                <div class="billing-info mb-20">
+                                    <label for="city">City</label>
+                                    <input type="text" name="city" placeholder="city" value="{{request.form.city }}">
+                                </div>
+                            </div>
+                            <div class="col-lg-12">
+                                <div class="billing-info mb-20">
+                                    <label for="postal_code">Postal Code</label>
+                                    <input type="text" name="postal-code" placeholder="Postal Code"
+                                        value="{{request.form.postal_code }}">
+                                </div>
+                            </div>
+                            <div class="col-lg-12">
+                                <div class="billing-info mb-20">
+                                    <label for="Email">Email</label>
+                                    <input type="text" name="email" placeholder="email" value="{{request.form.email }}">
+                                </div>
+                            </div>
+                            <div class="col-lg-12">
+                                <div class="billing-info mb-20">
+                                    <label for="phone_number">Phone Number</label>
+                                    <input type="text" name="phone_number" placeholder="phone_number"
                                         value="{{request.form.phone_number }}">
                                 </div>
                             </div>
