--- a/views/tailor/tailordeals.handlebars
+++ b/views/tailor/tailordeals.handlebars
@@ -1,121 +1,90 @@
 <div class="cart-main-area pt-98 pb-100">
-    <div class="container">
-        <h3 class="cart-page-title">Your deals</h3>
-        <div class="row">
-            <div class="col-lg-12 col-md-12 col-sm-12 col-12">
-                    <div class="table-content table-responsive cart-table-content">
-                        <table style=" margin-left: auto; margin-right: auto; width: 90%;">
-                            <thead>
-                                <tr>
-                                    <th>Product</th>
-                                    <th>Discounted Price</th>
-                                    <th>Start Date</th>
-                                    <th>End Date</th>
-                                    <th>Action</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                <tr>
-                                    <td class="product-name">Customised Suit</td>
-                                    <td class="product-discountp">$150</td>
-                                    <td class="product-start_date">23/05/2021</td>
-                                    <td class="product-end_date">26/05/2021</td>
-                                    <td class="product-remove">
-                                        <a href="/updatedeal"><i class="fa fa-pencil"></i></a>
-                                        <form action="#" method="POST" style="display: inline-block;">
-                                        <button type="button" style="border:none; background: none; display: inline-block;" data-toggle="modal" data-target="#myModal_"><i class="fa fa-times"></i></button>
-                                        <!-- The Modal -->
-                                        <div class="modal" id="myModal_">
-                                          <div class="modal-dialog">
-                                            <div class="modal-content">
+  <div class="container">
+    <h3 class="cart-page-title">Your deals</h3>
+    <div class="row">
+      {{#if deals}}
+      <div class="col-lg-12 col-md-12 col-sm-12 col-12">
+        <div class="table-content table-responsive cart-table-content">
+          <table style=" margin-left: auto; margin-right: auto; width: 90%;">
+            <thead>
+              <tr>
+                <th>Product</th>
+                <th>Discounted Price</th>
+                <th>Start Date</th>
+                <th>End Date</th>
+                <th>Action</th>
+              </tr>
+            </thead>
+            <tbody></tbody>
+            <tr>
+              {{#each deals}}
+              <td class="product-name">{{pname}}</td>
+              <td class="product-discountp">${{discountp}}</td>
+              <td class="product-start_date">{{dstartdate}}</td>
+              <td class="product-end_date">{{dexpirydate}}</td>
+              <td class="product-remove">
+                <a href="updatedeal/{{id}}"><i class="fa fa-pencil"></i></a>
+                <form action="#" method="POST" style="display: inline-block;">
+                  <button type="button" style="border:none; background: none; display: inline-block;"
+                    data-toggle="modal" data-target="#myModal_"><i class="fa fa-times"></i></button>
+                  <!-- The Modal -->
+                  <div class="modal" id="myModal_">
+                    <div class="modal-dialog">
+                      <div class="modal-content">
 
-                                              <!-- Modal Header -->
-                                              <div class="modal-header">
-                                                <h4 class="modal-title">Delete Confirmation</h4>
-                                                <button type="button" class="close" data-dismiss="modal">&times;</button>
-                                              </div>
+                        <!-- Modal Header -->
+                        <div class="modal-header">
+                          <h4 class="modal-title">Delete Confirmation</h4>
+                          <button type="button" class="close" data-dismiss="modal">&times;</button>
+                        </div>
 
-                                              <!-- Modal body -->
-                                              <div class="modal-body">
-                                                Are you sure you want to delete?
-                                              </div>
+                        <!-- Modal body -->
+                        <div class="modal-body">
+                          Are you sure you want to delete?
+                        </div>
 
-                                              <!-- Modal footer -->
-                                              <div class="modal-footer">
-                                               <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
-                                                  <button type="submit" value="Delete" class="btn btn-danger">Delete</button>
-                                              </div>
+                        <!-- Modal footer -->
+                        <div class="modal-footer">
+                          <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+                          <a href="deletedeal/{{id}}" type="submit" value="Delete" class="btn btn-danger">Delete</a>
+                        </div>
 
-                                            </div>
-                                          </div>
-                                        </div>
-                                    </form>
-                                   </td>
-                                </tr>
-                                <tr>
-                                <td class="product-name">Altering of Pants</td>
-                                    <td class="product-discountp">$8.50</td>
-                                    <td class="product-start_date">23/05/2021</td>
-                                    <td class="product-end_date">26/05/2021</td>
-                                    <td class="product-remove">
-                                        <a href="/updatedeal"><i class="fa fa-pencil"></i></a>
-                                        <form action="#" method="POST" style="display: inline-block;">
-                                        <button type="button" style="border:none; background: none; display: inline-block;" data-toggle="modal" data-target="#myModal_"><i class="fa fa-times"></i></button>
-                                        <!-- The Modal -->
-                                        <div class="modal" id="myModal_">
-                                          <div class="modal-dialog">
-                                            <div class="modal-content">
-
-                                              <!-- Modal Header -->
-                                              <div class="modal-header">
-                                                <h4 class="modal-title">Delete Confirmation</h4>
-                                                <button type="button" class="close" data-dismiss="modal">&times;</button>
-                                              </div>
-
-                                              <!-- Modal body -->
-                                              <div class="modal-body">
-                                                Are you sure you want to delete?
-                                              </div>
-
-                                              <!-- Modal footer -->
-                                              <div class="modal-footer">
-                                               <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
-                                                  <button type="submit" value="Delete" class="btn btn-danger">Delete</button>
-                                              </div>
-
-                                            </div>
-                                          </div>
-                                        </div>
-                                    </form>
-                                   </td>
-                                </tr>
-                                
-                            </tbody>
-                        </table>
+                      </div>
                     </div>
-            </div>
+                  </div>
+                </form>
+              </td>
+            </tr>
+            {{/each}}
+            </tbody>
+          </table>
         </div>
-        <div class="row">
-            <div class="col-lg-12">
-                <div class="cart-shiping-update-wrapper" style="float:right;">
-                    <div class="cart-clear">
-                        <a href="/adddeal">Add Item</a>
-                    </div>
-                </div>
-            </div>
-        </div>
+      </div>
     </div>
+    {{else}}
+    You do not have any flash deals.
+    {{/if}}
+    <div class="row">
+      <div class="col-lg-12">
+        <div class="cart-shiping-update-wrapper" style="float:right;">
+          <div class="cart-clear">
+            <a href="adddeal">Add Item</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
 
 <script>
-    $.ajax({
-        url: window.location.href,
-        headers: {
-            "Pragma": "no-cache",
-            "Expires": -1,
-            "Cache-Control": "no-cache"
-        }
-    }).done(function () {
-        window.location.reload(true);
-    });
+  $.ajax({
+    url: window.location.href,
+    headers: {
+      "Pragma": "no-cache",
+      "Expires": -1,
+      "Cache-Control": "no-cache"
+    }
+  }).done(function () {
+    window.location.reload(true);
+  });
 </script>
