--- a/views/rider/racceptorder.handlebars
+++ b/views/rider/racceptorder.handlebars
@@ -23,7 +23,7 @@
                     <p>Pick Up Location: <br> Blk 534 Ang Mio Kio Ave 5 #05-403 <br>Singapore 402932 </p>
                     <p>Destination: <br> Bedok Tailoring Shop <br>Blk 94B Bedok North Ave 4 <br>Singapore342123</p>
                         <a href="/rideroutecheck" class="error-btn" >Check Route</a>
-                        <a href="/homerider" class="error-btn" >Back to home page</a>
+                        <a href="../rider/homerider" class="error-btn" >Back to home page</a>
                 </div>
             </div>
         </div>
