--- a/views/tailor/tpwsuccess.handlebars
+++ b/views/tailor/tpwsuccess.handlebars
@@ -16,8 +16,8 @@
             <div class="col-xl-7 col-lg-8 text-center">
                 <div class="error">
                     <h2>You have succesfully reset your password! </h2>
-                        <a href="../talior/hometailor" class="error-btn" >Back to home page</a>
-                        <a href="../tailor/tailorlogin" class="error-btn" >Proceed to Login!</a>
+                        <a href="/talior/hometailor" class="error-btn" >Back to home page</a>
+                        <a href="/tailor/tailorlogin" class="error-btn" >Proceed to Login!</a>
                 </div>
             </div>
         </div>
