--- a/views/rider/rideregcomplete.handlebars
+++ b/views/rider/rideregcomplete.handlebars
@@ -18,7 +18,7 @@
                     <h1 style="font-size:75px">Thank You for Signing Up With Us!</h1>
                     <h2>Welcome to be part of the team!</h2>
                     <p>Please check your email or message within 1 - 2 weeks for additional details. Have a nice day! </p>
-                        <a href="../rider/homerider" class="error-btn" >Back to home page</a>
+                        <a href="/homerider" class="error-btn" >Back to home page</a>
                         <a href="../rider/riderlogin" class="error-btn" >Proceed to Login!</a>
                 </div>
             </div>
