--- a/views/rider/rresetlink.handlebars
+++ b/views/rider/rresetlink.handlebars
@@ -16,7 +16,7 @@
             <div class="col-xl-7 col-lg-8 text-center">
                 <div class="error">
                     <h2>Password reset link has been sent to your email. Please check your email! </h2>
-                        <a href="../rider/homerider" class="error-btn" >Back to home page</a>
+                        <a href="/homerider" class="error-btn" >Back to home page</a>
                         <a href="../rider/riderlogin" class="error-btn" >Proceed to Login!</a>
                 </div>
             </div>
