--- a/views/tailor/tresetlink.handlebars
+++ b/views/tailor/tresetlink.handlebars
@@ -16,7 +16,7 @@
             <div class="col-xl-7 col-lg-8 text-center">
                 <div class="error">
                     <h2>Password reset link has been sent to your email. Please check your email! </h2>
-                        <a href="../tailor/hometailor" class="error-btn" >Back to home page</a>
+                        <a href="/hometailor" class="error-btn" >Back to home page</a>
                         <a href="../tailor/tailorlogin" class="error-btn" >Proceed to Login!</a>
                 </div>
             </div>
