Revert "Merge branch 'main' of https://github.com/garry014/fullstack into main"
This reverts commit fd4fc4d04a2ef1a4a7525aaac983f0ed4c064df4, reversing
changes made to 3ce7fae36d38be98529d0d17521a32193c06e546.

--- a/views/tailor/updatevoucher.handlebars
+++ b/views/tailor/updatevoucher.handlebars
@@ -8,44 +8,43 @@
                             <h4> Update Voucher </h4>
                         </a>
                     </div>
-                    
                     <div id="lg2" class="tab-pane">
                         <div class="login-form-container">
                             <div class="login-register-form">
-                                <form action="/tailor/updateVoucher/{{vouchers.id}}?_method=PUT" method="post" id="updateVoucher">
+                                <form action="#" method="post">
                                     <div class="form-group">
                                         <label for="name">Voucher Code</label>
-                                        <input id="code" name="code" class="form-control" type="text" value="{{vouchers.code}}" >
+                                        <input id="code" name="code" class="form-control" type="text" value="" >
                                     </div>
 
                                     <div class="form-group">
                                         <label for="name">Description</label>
-                                        <input id="description" name="description" class="form-control" type="text" value="{{vouchers.description}}" >
+                                        <input id="description" name="description" class="form-control" type="text" value="" >
                                     </div>
                                     
                                     <div class="form-group">
                                         <label for="name">Discount(%)</label>
-                                        <input id="discount" name="discount" class="form-control" type="text" value="{{vouchers.discount}}" >
+                                        <input id="discount" name="discount" class="form-control" type="text" value="" >
                                     </div>
 
                                     <div class="form-group">
                                         <label for="name">Minimum Purchase($)</label>
-                                        <input id="minpurchase" name="minpurchase" class="form-control" type="text" value="{{vouchers.minpurchase}}" >
+                                        <input id="minpurchase" name="minpurchase" class="form-control" type="text" value="" >
                                     </div>
 
                                     <div class="form-group">
                                         <label for="name">Quantity</label>
-                                        <input id="quantity" name="quantity" class="form-control" type="text" value="{{vouchers.quantity}}" >
+                                        <input id="quantity" name="quantity" class="form-control" type="text" value="" >
                                     </div>
 
                                     <div class="form-group">
                                         <label for="name">Start Date (DD/MM/YYYY)</label>
-                                        <input id="vstartdate" name="vstartdate" class="form-control" type="text" value="{{vouchers.vstartdate}}" >
+                                        <input id="vstartdate" name="vstartdate" class="form-control" type="text" value="" >
                                     </div>
 
                                     <div class="form-group">
                                         <label for="name">Expiry Date (DD/MM/YYYY)</label>
-                                        <input id="vexpirydate" name="vexpirydate" class="form-control" type="text" value="{{vouchers.vexpirydate}}" >
+                                        <input id="vexpirydate" name="vexpirydate" class="form-control" type="text" value="" >
                                     </div>
 
                                     <div class="button-box">
