Revert "fix authentication"
This reverts commit 3ce7fae36d38be98529d0d17521a32193c06e546.

--- a/views/customer/custregcomplete.handlebars
+++ b/views/customer/custregcomplete.handlebars
@@ -18,7 +18,7 @@
                     <h1 style="font-size:75px">Thank You for Signing Up With Us!</h1>
                     <h2>Enjoy shopping at TailorNow!</h2>
                     <p>Please check your email or message within 1 - 2 weeks for additional details. Have a nice day! </p>
-                        <a href="../customer/homecust" class="error-btn" >Back to home page</a>
+                        <a href="/homecust" class="error-btn" >Back to home page</a>
                         <a href="../customer/custlogin" class="error-btn" >Proceed to Login!</a>
                 </div>
             </div>
