--- a/views/partials/_tnavbar.handlebars
+++ b/views/partials/_tnavbar.handlebars
@@ -108,7 +108,7 @@
                         <a class="account-satting-active" href="#"><i class="pe-7s-user-female"></i></a>
                         <div class="account-dropdown">
                             <ul>
-                                {{#if}}
+                                {{#if user}}
                                 <li>{{user.username}}</li>
                                 {{!-- user id problem --}}
                                 <li><a href="../customer/custaccount/{user.id}">Edit Profile</a></li>
