--- a/views/404.handlebars
+++ b/views/404.handlebars
@@ -22,7 +22,7 @@
                             <i class="fa fa-search"></i>
                         </button>
                     </form>
-                    <a href="/" class="error-btn">Back to home page</a>
+                    <a href="index.html" class="error-btn">Back to home page</a>
                 </div>
             </div>
         </div>
