--- a/views/partials/_tnavbar.handlebars
+++ b/views/partials/_tnavbar.handlebars
@@ -111,11 +111,11 @@
                                 {{#if user}}
                                 <li>{{user.username}}</li>
                                 {{!-- user id problem --}}
-                                <li><a href="../customer/custaccount/{user.id}">Edit Profile</a></li>
+                                <li><a href="../tailor/tailoraccount/{user.id}">Edit Profile</a></li>
                                 <li><a href="../tailor/tlogout">Log Out</a></li>
                                 {{else}}
-                                <li><a href="../customer/custlogin">Login</a></li>
-                                <li><a href="../customer/custregister">Register</a></li>
+                                <li><a href="../tailor/tailorlogin">Login</a></li>
+                                <li><a href="../tailor/tailoregister">Register</a></li>
                                  {{/if}}
                             </ul>
                         </div>
