--- a/views/partials/_tnavbar.handlebars
+++ b/views/partials/_tnavbar.handlebars
@@ -12,7 +12,12 @@
                 <div class="main-menu">
                     <nav>
                         <ul>
-
+                            <li><a href="/viewshops">View My Shop <i class="fa fa-angle-down"></i></a>
+                            <ul class="submenu">
+                                    <li><a href="">Change Target</a></li>
+                                    <li><a href="">Add Deals</a></li>
+                                </ul>
+                            </li>
                             <li><a href="/viewshops">Sales Chart <i class="fa fa-angle-down"></i></a>
                             <ul class="submenu">
                                     <li><a href="">Change Target</a></li>
@@ -25,11 +30,6 @@
                                 </ul>
                             </li>
 
-                             <li><a href="">Deals <i class="fa fa-angle-down"></i></i></a>
-                                <ul class="submenu">
-                                    <li><a href="">Add Deals</a></li>
-                                </ul>
-                            </li>
                              <li><a href="">Orders</a></li>
                              <li><a href="">Courses <i class="fa fa-angle-down"></i></i></a>
                                 <ul class="submenu">
