--- a/views/partials/_navbar.handlebars
+++ b/views/partials/_navbar.handlebars
@@ -97,8 +97,8 @@
                                 {{#if user}}
                                 <li>{{user.username}}</li>
                                 {{!-- user account problem --}}
-                                <li><a href="../customer/custaccount/{{user.id}}">Edit Profile</a></li>
-                                <li><a href="../customer/clogout">Log Out</a></li>
+                                <li><a href="/customer/custaccount/{{user.id}}">Edit Profile</a></li>
+                                <li><a href="/customer/clogout">Log Out</a></li>
                                 {{else}}
                                 <li><a href="../customer/custlogin">Login</a></li>
                                 <li><a href="../customer/custregister">Register</a></li>
