--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -43,7 +43,7 @@
     {{else}}
         {{#if (eq user.usertype "tailor")}}
         {{>_tnavbar}}
-        {{else if (eq user.usertype "customer")}}
+        {{else if (eq user.usertype "rider")}}
         {{>_rnavbar}}
         {{else}}
         {{>_navbar}}
