--- a/views/partials/_navbar.handlebars
+++ b/views/partials/_navbar.handlebars
@@ -3,7 +3,7 @@
         <div class="row">
             <div class="col-xl-2 col-lg-2 col-md-6 col-4">
                 <div class="logo">
-                    <a href="../customer/homecust">
+                    <a href="/customer/homecust">
                         <img alt="" src="/img/logo/logo.png">
                     </a>
                 </div>
@@ -12,10 +12,10 @@
                 <div class="main-menu">
                     <nav>
                         <ul>
-                            <li><a href="">View Shops <i class="fa fa-angle-down"></i></i></a>
+                            <li><a href="/viewshops">View Shops <i class="fa fa-angle-down"></i></i></a>
                                 <ul class="submenu">
                                     <li><a href="">Course Catalouge</a></li>
-                                    <li><a href="">Product Catalouge</a></li>
+                                    <li><a href="/viewshops">Product Catalouge</a></li>
                                 </ul>
                             </li>
 
