--- a/views/partials/_rnavbar.handlebars
+++ b/views/partials/_rnavbar.handlebars
@@ -3,7 +3,7 @@
         <div class="row">
             <div class="col-xl-2 col-lg-2 col-md-6 col-4">
                 <div class="logo">
-                    <a href="../rider/homerider">
+                    <a href="/rider/homerider">
                         <img alt="" src="/img/logo/logo.png">
                     </a>
                 </div>
@@ -86,17 +86,17 @@
                                 {{#if user}}
                                 <li>{{user.username}}</li>
                                 {{!-- user id problem --}}
-                                <li><a href="../rider/rideraccount/{user.id}">Edit Profile</a></li>
-                                <li><a href="../rider/rlogout">Log Out</a></li>
+                                <li><a href="/rider/rideraccount/{user.id}">Edit Profile</a></li>
+                                <li><a href="/rider/rlogout">Log Out</a></li>
                                 {{else}}
-                                <li><a href="../rider/riderlogin">Login</a></li>
-                                <li><a href="../rider/rideregister">Register</a></li>
-                                 {{/if}}
+                                <li><a href="/rider/riderlogin">Login</a></li>
+                                <li><a href="/rider/rideregister">Register</a></li>
+                                {{/if}}
                             </ul>
                         </div>
                     </div>
                     <div class="same-style header-wishlist">
-                        <a href="/inbox"><i class="pe-7s-chat"></i></a>
+                        <a href="/inbox/0"><i class="pe-7s-chat"></i></a>
                     </div>
                     <div class="same-style cart-wrap">
                         <button class="icon-cart">
