--- a/views/partials/_navbar.handlebars
+++ b/views/partials/_navbar.handlebars
@@ -24,7 +24,7 @@
                             <li><a href="">Flash Deals</a>
                             </li>
 
-                            <li><a href="">Help </a></li>
+                            <li><a href="/faq">Help </a></li>
                         </ul>
                     </nav>
                 </div>
@@ -135,7 +135,7 @@
                                 <li><a href="">My Courses</a></li>
                             </ul>
                         </li>
-                        <li><a href="">Help </a></li>
+                        <li><a href="/faq">Help </a></li>
                     </ul>
                 </nav>
             </div>
