--- a/views/partials/_rnavbar.handlebars
+++ b/views/partials/_rnavbar.handlebars
@@ -15,7 +15,7 @@
                             <li><a href="">View Orders </a></li>
                             <li><a href="">My Orders </a></li>
 
-                            <li><a href="">Help </a></li>
+                            <li><a href="/faq">Help </a></li>
                         </ul>
                     </nav>
                 </div>
@@ -124,7 +124,7 @@
                                 <li><a href="">My Courses</a></li>
                             </ul>
                         </li>
-                        <li><a href="">Help </a></li>
+                        <li><a href="/faq">Help </a></li>
                     </ul>
                 </nav>
             </div>
