--- a/views/partials/_tnavbar.handlebars
+++ b/views/partials/_tnavbar.handlebars
@@ -41,7 +41,7 @@
                                 </ul>
                             </li>
 
-                            <li><a href="">Help </a></li>
+                            <li><a href="/faq">Help </a></li>
                         </ul>
                     </nav>
                     {{else}}
@@ -142,7 +142,7 @@
                                 <li><a href="">My Courses</a></li>
                             </ul>
                         </li>
-                        <li><a href="">Help </a></li>
+                        <li><a href="/faq">Help </a></li>
                     </ul>
                 </nav>
             </div>
