--- a/views/user/chat.handlebars
+++ b/views/user/chat.handlebars
@@ -321,7 +321,77 @@
 </div>
 
 <!-- UI to show when screen size is small -->
-
+<div class="inbox_people_mobile">
+            <div class="headind_srch">
+                <div class="recent_heading">
+                    <a href="/inbox/0">
+                        <u>
+                            <h4>Recent</h4>
+                        </u>
+                    </a> | <a href="/archive/0">
+                        <h4>Archives</h4>
+                    </a>
+                </div>
+                <div class="srch_bar">
+                    <div class="stylish-input-group">
+                        <input type="text" class="search-bar" placeholder="Search">
+                        <span class="input-group-addon">
+                            <button type="button"> <i class="fa fa-search" aria-hidden="true"></i> </button>
+                        </span>
+                    </div>
+                </div>
+            </div>
+            <div class="inbox_chat">
+                {{#if chats}}
+                {{#each chats}}
+                    {{#ifCond id '==' ../id}}
+                    <div class="chat_list active_chat">
+                        <div class="chat_people">
+                            <div class="chat_img"> <img src="https://ptetutorials.com/images/user-profile.png" alt="sunil">
+                            </div>
+                            <div class="chat_ib">
+                                <h5>{{#ifCond ../currentuser "==" recipient}}{{sender}}{{else}}{{recipient}}{{/ifCond}}</h5>
+                                <p id="messagePreview">
+                                    {{#ifCond message "!=" null}}
+                                        {{#ifCond message "==" 0}}
+                                            <i>This chat is currently empty.</i>
+                                        {{else}}
+                                            {{message}}
+                                        {{/ifCond}}
+                                    {{else}}
+                                        <i>Sent an attachment</i>
+                                    {{/ifCond}}
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    {{else}}
+                    <a href="/inbox/{{id}}">
+                        <div class="chat_list">
+                            <div class="chat_people">
+                                <div class="chat_img"> <img src="https://ptetutorials.com/images/user-profile.png" alt="sunil">
+                                </div>
+                                <div class="chat_ib">
+                                    <h5>{{#ifCond currentuser "==" recipient}}{{sender}}{{else}}{{recipient}}{{/ifCond}}</h5>
+                                    <p>{{#ifCond message "!=" null}}
+                                            {{#ifCond message "==" 0}}
+                                                <i>This chat is currently empty.</i>
+                                            {{else}}
+                                                {{message}}
+                                            {{/ifCond}}
+                                        {{else}}
+                                            <i>Sent an attachment</i>
+                                        {{/ifCond}}
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                    {{/ifCond}}
+                {{/each}}
+                {{/if}}
+            </div>
+        </div>
 <!-- not done lol -->
 
 <ul id="users"></ul>
